codex-rs/tui/src/bottom_pane/ask_user_question/snapshots/codex_tui__bottom_pane__ask_user_question__tests__ask_user_question_multiple_choice_custom_and_next.snap
---
source: tui/src/bottom_pane/ask_user_question/mod.rs
assertion_line: 733
expression: "render_snapshot(&overlay, area)"
---
←   ☑  Features   ✓  Submit                                                            →  
                                                                                          
Review your answers                                                                       
                                                                                          
Features: Auth, Realtime                                                                  
                                                                                          
                                                                                          
                                                                                          
[ Submit ]  [ Cancel ]                                                                    
                                                                                          
                                                                                          
──────────────────────────────────────────────────────────────────────────────────────────
←/→ tabs                                                                                  
──────────────────────────────────────────────────────────────────────────────────────────
↑/↓ move | enter select/next | esc cancel                                                 
──────────────────────────────────────────────────────────────────────────────────────────
