codex-rs/tui/src/bottom_pane/ask_user_question/snapshots/codex_tui__bottom_pane__ask_user_question__tests__ask_user_question_single_choice_autoadvance_to_submit.snap
---
source: tui/src/bottom_pane/ask_user_question/mod.rs
assertion_line: 645
expression: "render_snapshot(&overlay, area)"
---
←   ☑  Backend   ✓  Submit                                                             →  
                                                                                          
Review your answers                                                                       
                                                                                          
Backend: Express.js                                                                       
                                                                                          
                                                                                          
                                                                                          
[ Submit ]  [ Cancel ]                                                                    
                                                                                          
                                                                                          
──────────────────────────────────────────────────────────────────────────────────────────
←/→ tabs                                                                                  
──────────────────────────────────────────────────────────────────────────────────────────
↑/↓ move | enter select/next | esc cancel                                                 
──────────────────────────────────────────────────────────────────────────────────────────
