codex-rs/tui/src/bottom_pane/ask_user_question/snapshots/codex_tui__bottom_pane__ask_user_question__tests__ask_user_question_submit_inserts_chat_summary_cell.snap
---
source: tui/src/bottom_pane/ask_user_question/mod.rs
assertion_line: 850
expression: "render_history_snapshot(&summary_cell, Rect::new(0, 0, width, height))"
---
● User answered:                                                                                              
  ⎿  · Какой тип инструмента вы хотите реализовать первым? → getBlockingTree                                  
     · Какие провайдеры нужно поддерживать? → AWS + GCP                                                       
     · Какие дополнительные функции включить? → Version detection, Token budget, Playbook integration
