codex-rs/tui/src/bottom_pane/ask_user_question/snapshots/codex_tui__bottom_pane__ask_user_question__tests__ask_user_question_submit_shows_blank_for_unanswered.snap
---
source: tui/src/bottom_pane/ask_user_question/mod.rs
assertion_line: 772
expression: "render_snapshot(&overlay, area)"
---
←   ☑  Backend   ☐  Database   ✓  Submit                                               →  
                                                                                          
Review your answers                                                                       
                                                                                          
Backend: Next.js API Routes                                                               
Database:                                                                                 
                                                                                          
                                                                                          
[ Submit ]  [ Cancel ]                                                                    
                                                                                          
                                                                                          
──────────────────────────────────────────────────────────────────────────────────────────
←/→ tabs                                                                                  
──────────────────────────────────────────────────────────────────────────────────────────
↑/↓ move | enter select/next | esc cancel                                                 
──────────────────────────────────────────────────────────────────────────────────────────
